--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ main {
 
 p {
     text-align: center;
-    font-size: 16px;
+    font-size: 17px;
     margin-top: 0;
     margin-bottom: 23px;
     line-height: 22px;
     color: hsl(0, 0%, 100%);
     opacity: 0.7;
+    font-weight: 500;
 }
 
 button {
@@ -36,6 +37,11 @@ button {
     border: none;
     border-radius: 30px;
     background-color: hsl(224, 30%, 27%);
+    cursor: pointer;
+}
+
+button:hover {
+    background-image: linear-gradient(hsl(252, 100%, 67%) ,hsl(241, 81%, 54%));
 }
 
 .left-container {
@@ -51,7 +57,7 @@ button {
     padding-right: 60px;
     padding-top: 55px;
     padding-bottom: 55px;
-    border-radius: 26px;
+    border-radius: 30px;
     position: absolute;
     right: 370px;
     
@@ -75,17 +81,19 @@ button {
     margin-top: 8px;
     margin-bottom: 18px;
     opacity: 0.7;
+    font-weight: 600;
 }
 
 #seven-six, 
 #great,
 #result
  {
-    font-weight: 700;
+    
     color: hsl(0, 0%, 100%);
 } 
 
 #seven-six {
+    font-weight: 700;
     font-size: 4.3em;
     margin-top: 40px;
 }
@@ -94,6 +102,7 @@ button {
    font-size: 31px;
    margin-top: 11px;
    margin-bottom: 3px;
+   font-weight: 600;
 }
 
 #one-hundred {
@@ -108,7 +117,7 @@ button {
     width: 420px;
     height: 511px;
     justify-content: end;
-    border-radius: 26px;
+    border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
     
 }
@@ -191,6 +200,12 @@ button {
 
 #visual {
     color: hsl(234, 85%, 45%);
+}
+
+.number, 
+#fraction {
+    font-weight: 600;
+    font-size: 19px;
 }
 
 @media only screen and (max-width: 414px) {
