--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ button:hover {
         padding-bottom: 21px;
         border-radius: 46px;
         font-size: 19px;
+        border: none;
     }
 
     button:hover {
